-Fixed Design issue on task planning page(Change color and font weight of "base date " and "days to shift ")

--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -200,6 +200,7 @@ button.customBtn, button.customBtn:focus {
     margin: 5px;
     transition: 0.8s;
     border-radius: 0;
+
 }
 
 button.customBtn:hover {
@@ -1398,6 +1399,11 @@ p.task-description {
 }
 
 .planDividerDate span {
+    color: white;
+    font-weight: 700;
+}
+
+.planDividerDate label {
     color: white;
 }
 
